updated model with redis cache_service

--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -51,7 +51,8 @@
         
         <div class="test-buttons">
             <button id="lookupBtn" onclick="lookupBtn()">Lookup</button>
-            <button onclick="testRawUMLS()">Add to use case</button>
+            <button id="positiveResponse" onclick="positiveResponse()">Good Response</button>
+            <button onclick="negativeResponse()">Not Helpful</button>
             <button onclick="clearResult()">Clear</button>
         </div>
         
