--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -60,5 +60,6 @@
 
     <script src="script.js"></script>
     <script src="form.js"></script>
+    <script src="fhirv2.js"></script>
 </body>
 </html>
